2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* icons/: Revamp icons yet again.

2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* icons/scalable/*.svg: Update icons. I think they look better
	  this way.
	* panel-plugin/xfce-volume-button.c: Stop other "event-scroll"
	  handlers from being invoked after handling them inside the
	  volume button.

2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-mixer-plugin.c: Add support for tooltips 
	  showing the currently used track and volume level in percent 
	  (e.g. 'Master: 50%').

2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Preload icon pixbufs whenever
	  the icon size is changed.

2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/xfce-mixer.c: Don't free the hash table keys as
	  they are owned by GStreamer. That introduced a really, really
	  weird bug ...
	* xfce4-mixer/xfce-mixer-track.c: Use 5% step size for all 
	  faders.

2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/xfce-mixer-track.c: Fix crash when moving the 
	  fader of a mixer track with only one channel (which was 
	  caused by accessing the unitialized track->lock_button
	  variable).

2008-06-22	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/xfce-mixer-track.{c,h},
	  xfce4-mixer/xfce-mixer-option.{c,h},
	  xfce4-mixer/xfce-mixer-switch.{c,h},
	  xfce4-mixer/xfce-mixer.c: Implement monitoring for mute,
	  record, volume, option and switch changes on all controls.
	  Works like a charm!

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-card.c: Mark cards as ready when
	  creating them. If the state is changed asynchroneously, wait
	  until the state change is done before returning from
	  xfce_mixer_card_set_state_ready().

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Remove the keyboard 
	  grabbing feature. It causes too much problems. People without